; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_dstr_from_mbs.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_dstr_from_mbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dstr_from_mbs(%struct.dstr* %0, i8* %1) #0 {
  %3 = alloca %struct.dstr*, align 8
  %4 = alloca i8*, align 8
  store %struct.dstr* %0, %struct.dstr** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.dstr*, %struct.dstr** %3, align 8
  %6 = call i32 @dstr_free(%struct.dstr* %5)
  %7 = load i8*, i8** %4, align 8
  %8 = load %struct.dstr*, %struct.dstr** %3, align 8
  %9 = getelementptr inbounds %struct.dstr, %struct.dstr* %8, i32 0, i32 0
  %10 = call i32 @os_mbs_to_utf8_ptr(i8* %7, i32 0, i32* %9)
  %11 = load %struct.dstr*, %struct.dstr** %3, align 8
  %12 = getelementptr inbounds %struct.dstr, %struct.dstr* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  ret void
}

declare dso_local i32 @dstr_free(%struct.dstr*) #1

declare dso_local i32 @os_mbs_to_utf8_ptr(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
